--- a/Project/Assignment1/word_embeddings.ipynb
+++ b/Project/Assignment1/word_embeddings.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "articles = pd.read_excel(\"OpArticles.xlsx\")"
+    "articles = pd.read_excel(\"./data/OpArticles.xlsx\")"
    ]
   },
   {
