--- a/Project/Assignment1/vectorizer.ipynb
+++ b/Project/Assignment1/vectorizer.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "dataset = pd.read_excel('OpArticles_ADUs.xlsx')"
+    "dataset = pd.read_excel('./data/OpArticles_ADUs.xlsx')"
    ]
   },
   {
