ass1 final code

--- a/Project/Assignment1/preprocessing.ipynb
+++ b/Project/Assignment1/preprocessing.ipynb
@@ -373,23 +373,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclusions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The _Porter Stemmer_  had similar metrics to the others, but it does not make sense to use it since it is not a Stemmer aimed to Portuguese text, was only used as a matter of comparison.\n",
-    "\n",
-    "We will use the _RSLP Stemmer_ as it trims more the word endings and leads to less features, causing smaller matrixes for the classifiers and thus faster times and less resources.\n",
-    "Even though the preprocess time was double compared to the _Snowball Portuguese Stemmer_, the metrics are simliar, and it is only run once in the preprocess before the classification tasks, so the advantages outweight this disavantage."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Lemmatization\n",
     "\n",
     "In contrast to stemming, lemmatization looks beyond word reduction and considers a language’s full vocabulary to apply a morphological analysis to words.\n",
@@ -532,6 +515,25 @@
     "print(\"\\nModel time: %0.2fs\" % (stop - start))\n",
     "print(\"\\nClassification report:\\n\", classification_report(y_test, y_pred))\n",
     "ConfusionMatrixDisplay(confusion_matrix(y_test, y_pred, labels=clf.classes_), display_labels=clf.classes_).plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The _Porter Stemmer_  had similar metrics to the others, but it does not make sense to use it since it is not a Stemmer aimed to Portuguese text, was only used as a matter of comparison.\n",
+    "\n",
+    "We will use the _RSLP Stemmer_ as it trims more the word endings and leads to less features, causing smaller matrixes for the classifiers and thus faster times and less resources.\n",
+    "Even though the preprocess time was double compared to the _Snowball Portuguese Stemmer_, the metrics are simliar, and it is only run once in the preprocess before the classification tasks, so the advantages outweight this disavantage.\n",
+    "\n",
+    "Lemmatization lead to similar scores but with a lot higher preprocessing times. Although this would not be a big issue since the preprocessing will be run only in the beginning of the classification notebook, we opted not to explore further this technique"
    ]
   }
  ],
