--- a/Project/Assignment1/vectorizer.ipynb
+++ b/Project/Assignment1/vectorizer.ipynb
@@ -618,7 +618,7 @@
    "source": [
     "### Conclusions\n",
     "\n",
-    "As we can see the _TfidfVectorizer_ achieve better results (not by much), and we think it is better to also take into account for the document frequency and not only the term count, so this is the Vectorizer that we will use for the classification tasks"
+    "As we can see the _TfidfVectorizer_ achieve better results (not by much), and we think it is better to also take into account for the document frequency and not only the term count, so this is the Vectorizer that we will use for the classification tasks. Besides that the model fit and predict times are considerably lower with this vectorizer"
    ]
   },
   {
