Small changes to multilingual

--- a/Project/Assignment2/multilingual.ipynb
+++ b/Project/Assignment2/multilingual.ipynb
@@ -45,7 +45,7 @@
         },
         "outputId": "b8e9c3e8-573e-48c9-f112-64cea6e4cab2"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,12 +80,12 @@
       "metadata": {
         "id": "vVpCpzK5ZQT8"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "EwL0UYu3T4D6",
         "colab": {
@@ -160,7 +160,7 @@
         "id": "0IDxc99zZzAP",
         "outputId": "1233e475-aead-4057-a844-7574b70e667f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,7 +190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "SBuO31lRT4D8",
         "colab": {
@@ -301,7 +301,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "scrolled": true,
         "id": "4KTZJol_T4EB"
@@ -347,7 +347,7 @@
         },
         "outputId": "51484d41-ecff-4796-9858-aedd679eea13"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -372,7 +372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "dbtKsaV8T4ED"
       },
@@ -385,7 +385,7 @@
         "    return tokenizer(sample[\"tokens\"], truncation=True, max_length=86, padding=\"max_length\")\n",
         "\n",
         "def get_tokenized_data(dataset):\n",
-        "    return dataset.map(tokenize_dataset, batched=True)"
+        "    return dataset.map(tokenize_dataset, batched=True, remove_columns=[\"tokens\"])"
       ]
     },
     {
@@ -408,14 +408,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "aTRvqR7TT4EH"
       },
       "outputs": [],
       "source": [
         "from transformers import AutoModelForSequenceClassification\n",
-        "import torch\n",
         "\n",
         "def get_model(name):\n",
         "    model = AutoModelForSequenceClassification.from_pretrained(name, num_labels=5)\n",
@@ -438,7 +437,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "JKPJ6Jr2T4EI"
       },
@@ -529,7 +528,7 @@
         "  display(trainer.predict(test_dataset=tokenized_dataset[\"test\"]))\n",
         "\n",
         "  # Save model for future use\n",
-        "  trainer.save_model('/content/drive/Shareddrives/PLN/Assignment 2/models/' + lang + '/' + model_name)"
+        "  trainer.save_model('/content/drive/Shareddrives/PLN/Assignment 2/models/multilingual/' + lang + '/' + model_name)"
       ],
       "metadata": {
         "id": "UTY8gCm4O3de",
@@ -640,7 +639,7 @@
         },
         "outputId": "83a4fccd-8763-49dd-c0cc-54d22883e358"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -934,7 +933,7 @@
         "id": "SXbLFebNAt1d",
         "outputId": "6c14b5c7-2f1d-4e18-fe35-da9731bea756"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1153,7 +1152,7 @@
       "metadata": {
         "id": "HqIykAfoAvEf"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1178,7 +1177,7 @@
         "id": "pf9vXIRigrKu",
         "outputId": "3d9859f5-a713-4b6b-a563-e371ad5d2798"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1395,7 +1394,7 @@
       "metadata": {
         "id": "rl1tklfCYxp-"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1420,7 +1419,7 @@
         "id": "Z8chX0dyioYg",
         "outputId": "0c924dbc-0b39-4597-d49d-f2505a97d282"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1639,7 +1638,7 @@
       "metadata": {
         "id": "mP3MUlGqiqG5"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1664,7 +1663,7 @@
         "id": "d6XxhOiSp_XL",
         "outputId": "8e8bfdad-fbb2-44a7-f546-e52b46197056"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1883,7 +1882,7 @@
       "metadata": {
         "id": "mVDRS799qQA8"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1908,7 +1907,7 @@
         "id": "8wTvsSn6u_NH",
         "outputId": "b6efe419-ffbc-4180-951b-6ab7670e34ad"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2127,7 +2126,7 @@
       "metadata": {
         "id": "JgO9zyt2vCju"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2152,7 +2151,7 @@
         "id": "4IBaLWGM2q02",
         "outputId": "a1451527-76c7-495b-98b9-df9e6b85675b"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2371,7 +2370,7 @@
       "metadata": {
         "id": "Sywb8p5j2uPe"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2396,7 +2395,7 @@
         "id": "-gixepLM2vMC",
         "outputId": "ee4eb241-812b-42e0-bbd4-e637c9dd6ab0"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2615,7 +2614,7 @@
       "metadata": {
         "id": "g9SildC62vMD"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2645,7 +2644,7 @@
       "metadata": {
         "id": "3x8gY06uG2Ww"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2660,7 +2659,7 @@
         "id": "GbMg3b2THJrj",
         "outputId": "1505c439-914e-47ec-f55e-c5101106baca"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2690,7 +2689,7 @@
         "id": "F1xYG1qEHSsQ",
         "outputId": "ad2b0a63-9f18-4366-88d4-f864b6c29ace"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2900,6 +2899,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!rm -rf ./results/"
+      ],
+      "metadata": {
+        "id": "o1OZM7nZd4gw"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
